<resources>
    <string name="app_name">intrek</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">Login</string>
    <string name="facebook_app_id">2541367942643642</string>
    <string name="fb_login_protocol_scheme">fb2541367942643642</string>
    <string name="pause">Pause</string>
    <string name="timer">Timer</string>
    <string name="heartrate">HeartRate</string>
    <string name="show_map">Show map</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="title_activity_maps">Map</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="total_hikes_description">Total Hikes</string>
    <string name="avg_distance_km_description">Avg. Distance [km]</string>
    <string name="avg_pace_min_km_description">Avg. Pace [min/km]</string>
    <string name="avg_elevation_m_description">Avg. Elevation [m]</string>
    <string name="total_distance_description">Total Distance</string>
    <string name="total_elevation_description">Total Elevation</string>
    <string name="farthest_hike_description">Farthest Hike</string>
    <string name="longest_hike_description">Longest Hike</string>
    <string name="highest_elevation_description">Highest Elevation</string>
    <string name="registered_user_message">Welcome back! Enter password to sign in</string>
</resources>
